<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    android:background="#CBF3F0"
    tools:context="gj.udacity.myappportfolio.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainTitle"
            android:paddingBottom="50dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/appButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/App1"
            android:layout_marginBottom="15dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_layout"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/appButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/App2"
            android:layout_marginBottom="15dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_layout"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/appButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/App3"
            android:layout_marginBottom="15dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_layout"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/appButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/App4"
            android:layout_marginBottom="15dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_layout"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/appButton5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/App5"
            android:layout_marginBottom="15dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_layout"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/appButton6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/App6"
            android:textColor="#FFFFFF"
            android:background="@drawable/capstone_layout"
            android:textAppearance="?android:attr/textAppearanceLarge" />


    </LinearLayout>
</RelativeLayout>
